<resources>
    <string name="app_name">Talk</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_default_username">press f</string>
    <string name="settings_default_state">online</string>
    <string name="settings_text_account">Account</string>
    <string name="settings_default_number">+71111111111</string>
    <string name="settings_label_phone">Tap to change phone number</string>
    <string name="settings_default_username">press f</string>
    <string name="settings_label_username">Tap to change username</string>
    <string name="settings_default_bio">About</string>
    <string name="settings_label_bio">Write a little about yourself</string>
    <string name="settings_menu_change_name">Change name</string>
    <string name="settings_menu_exit"> Sign out</string>
    <string name="cd_next">next</string>
    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_code">Enter code</string>
    <string name="register_text_enter_phone">Your phone number</string>
    <string name="register_text_we_sent">We sent SMS with code on your phone number</string>
    <string name="register_text_phone">Enter your phone number</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_hint_default_calendar">--/--/----</string>
    <string name="register_title_your_phone">Your number</string>
    <string name="register_toast_phone_number">Enter your phone number</string>
    <string name="register_hint_default_phone">- - - - - - - - - - -</string>
    <string name="settings_hint_input_name">Name</string>
    <string name="settings_hint_input_username">Username</string>
    <string name="settings_hint_input_surname">Surname</string>
    <string name="toast_is_empty_name">Enter a name</string>
    <string name="toast_data_update">Data update</string>
    <string name="msg">Message</string>
    <string name="name_item">Name item</string>
    <string name="last_msg">Last message</string>
    <string name="clean_chat">Clear chat</string>
    <string name="chat_empty">Chat empty</string>
    <string name="delete_chat">Delete chat</string>
    <string name="create_group">Create group</string>
    <string name="input_name_group">Enter name group</string>
    <string name="add_user_in_group">Add members</string>
    <string name="record">Record</string>


    <plurals name="count_members">
        <item quantity="one">%d member</item>
        <item quantity="few">%d members</item>
        <item quantity="many">%d members</item>
        <item quantity="other">%d members</item>
    </plurals>


    <!--    navbar   -->
    <string name="navbar_group">Create group</string>
    <string name="navbar_contacts">Contacts</string>
    <string name="navbar_calendar">Calendar</string>
    <string name="navbar_settings">Settings</string>
    <string name="navbar_guide">Guide</string>
    <string name="navbar_doc">Statement</string>
    <string name="enter_message">Enter message</string>
    <string name="Empty">The field should not be empty</string>
    <string name="chat_clear_text">Chat clear</string>
    <string name="chat_delete_text">Chat delete</string>
    <string name="nickname_exists">This nickname already exists</string>
    <string name="enter_name">Enter name</string>
    <string name="card_call_book_name">Phone book</string>
    <string name="card_about_dom_name">About dormitory </string>
    <string name="url"> <a href="https://maps.google.com?saddr=Current+Location&#38;daddr=47.1411.6,39.4242">sq.Gagarina 1</a></string>
    <string name="administration">Administration</string>
    <string name="dstu_site">DSTU</string>
    <string name="stud_site">StudCity</string>
    <string name="number_phone_dom">+7(863)238-17-57</string>
    <string name="email_url">spu-08.5.13@donstu.ru</string>
    <string name="vk_url"> <a href="https://vk.com/desyatochka_dstu">VKontakte</a></string>
    <string name="about_dom_description">Description</string>
    <string name="about_dom_social">Social</string>
    <string name="about_dom_Location">Location</string>
    <string name="dom_phone_number">Number phone</string>
    <string name="add_events_text">Add Events</string>
    <string name="service_call">Services</string>
    <string name="phn_hint">Phone number</string>
    <string name="navbar_services">Service</string>


    <string-array name="Service">
        <item>Сантехник</item>
        <item>Электрик</item>
        <item>Интернет</item>
    </string-array>
</resources>