<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screens.register.EnterCodeFragment">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="170dp"
        android:src="@drawable/ic_enter_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cd_register_image" />

    <TextView
        android:id="@+id/register_text_enter_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_text_enter_code"
        android:textStyle="bold"
        android:textSize="@dimen/normalText"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="@dimen/vertical_large_margin"
        app:layout_constraintTop_toBottomOf="@+id/register_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/register_text_we_sent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/smallText"
        android:text="@string/register_text_we_sent"
        android:layout_margin="@dimen/app_small_margin"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/register_text_enter_code"/>


    <EditText
        style="@style/editText"
        android:id="@+id/register_input_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/register_hint_default_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_text_we_sent"
        tools:ignore="LabelFor"
        android:autofillHints=""
        android:maxLength="6"
        android:gravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>