<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_block"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/teal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/settings_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white_dark"
            android:textSize="@dimen/settingSmallText"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_fullname"
            tools:text="@string/settings_default_state" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_user_photo"
            android:layout_width="@dimen/set_user_photo_width"
            android:layout_height="@dimen/set_user_photo_height"
            android:src="@drawable/default_photo"
            app:civ_border_color="#FF000000"
            app:civ_circle_background_color="@color/white"
            android:layout_margin="@dimen/app_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
  />

        <TextView
            android:id="@+id/settings_fullname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_small_margin"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/settingText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_user_photo"
            tools:text="@string/user_default_username" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_phone"
        style="@style/settingsButtons"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/settings_header_block"
        app:layout_constraintEnd_toStartOf="@+id/settings_btn_change_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_block"
        android:background="@drawable/corner"
        android:elevation="5dp">

        <TextView
            android:id="@+id/settings_phone_number"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColor="@color/teal"
            android:textSize="@dimen/settingNText"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/settings_btn_change_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/settings_btn_change_phone"
            app:layout_constraintVertical_bias="1.0"
            tools:text="@string/settings_default_number" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_btn_change_photo"
        android:layout_width="@dimen/settings_btn_change_photo_width"
        android:layout_height="@dimen/settings_btn_change_photo_height"
        android:src="@drawable/ic_camera"
        app:civ_border_color="#FF000000"
        android:elevation="5dp"
        app:civ_circle_background_color="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/settings_header_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settings_btn_change_phone"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_block" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_username"
        style="@style/settingsButtons"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/app_margin"
        android:background="@drawable/corner"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_phone">

        <TextView
            android:layout_marginTop="@dimen/app_small_margin"
            android:id="@+id/settings_username"
            style="@style/normalText"
            android:textSize="@dimen/settingText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/settings_btn_change_username"
            tools:text="@string/settings_default_username" />

        <TextView
            android:id="@+id/settings_label_username"
            style="@style/smallText"
            android:layout_marginStart="16dp"
            android:text="@string/settings_label_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_username" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_bio"
        style="@style/settingsButtons"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/corner"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_username">

        <TextView
            android:id="@+id/settings_bio"
            style="@style/normalText"
            android:layout_marginTop="@dimen/app_small_margin"
            android:layout_marginEnd="@dimen/app_small_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/settings_btn_change_bio"
            tools:text="@string/settings_default_bio"
            android:layout_width="match_parent"
            />

        <TextView
            android:id="@+id/settings_label_bio"
            style="@style/smallText"
            android:layout_marginBottom="@dimen/app_small_margin"
            android:layout_marginStart="@dimen/app_margin"
            android:layout_marginTop="@dimen/app_small_margin"
            android:text="@string/settings_label_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/settings_btn_change_bio"
            app:layout_constraintTop_toBottomOf="@+id/settings_bio" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>